// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextInputField rendering adds the error class if the error is set 1`] = `
<FieldWrapper
  className="TextInputField"
  error="Error"
  helperId="random-id-helper"
  helperText="Helper text"
  htmlFor="random-id"
  label="Label"
>
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={true}
    as="input"
    className="TextInputField__input TextInputField--error"
    disabled={false}
    id="random-id"
    maxLength={10}
    name="name"
    onChange={[Function]}
    placeholder="placeholder"
    type="text"
    value="value"
  />
</FieldWrapper>
`;

exports[`TextInputField rendering renders expected elements 1`] = `
<FieldWrapper
  className="TextInputField"
  helperId="random-id-helper"
  helperText="Helper text"
  htmlFor="random-id"
  label="Label"
  required={true}
>
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    aria-required={true}
    as="input"
    className="TextInputField__input"
    id="random-id"
    maxLength={10}
    name="name"
    onChange={[Function]}
    placeholder="placeholder"
    type="text"
    value="value"
  />
</FieldWrapper>
`;

exports[`TextInputField rendering renders expected elements when className is set 1`] = `
<FieldWrapper
  className="TextInputField TestClass"
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Label"
>
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    as="input"
    className="TextInputField__input"
    disabled={false}
    id="random-id"
    maxLength={10}
    name="name"
    onChange={[Function]}
    placeholder="placeholder"
    type="text"
    value="value"
  />
</FieldWrapper>
`;

exports[`TextInputField rendering renders expected elements when value is empty 1`] = `
<FieldWrapper
  className="TextInputField"
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Label"
>
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    as="input"
    className="TextInputField__input"
    disabled={false}
    id="random-id"
    maxLength={10}
    name="name"
    onChange={[Function]}
    placeholder="placeholder"
    type="text"
    value=""
  />
</FieldWrapper>
`;
